working on bug, table on mobile does not display properly. Still not fixed, need to do some more work on it being more responsive to screen sizes.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,3 +107,21 @@ main {
     border-radius: 5%;
     color: white;
 }
+/* -_-_-_-_-_-_-_-_-_-_ Manage Garages Page _-_-_-_-_-_-_-_-_-_- */
+
+@media screen and (max-width: 600px) {
+  .table {
+    display: flex;  
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+
+  .table tr {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .table td {
+    white-space: nowrap;
+  }
+}
